fixed headline spacings in article

--- a/assets/sass/post.scss
+++ b/assets/sass/post.scss
@@ -57,7 +57,12 @@
   .card-content {
     font-weight: normal;
     line-height: 1.9;
-    color: #6b6f82;    
+    color: #6b6f82;
+
+    h1,h2,h3,h4 {
+      margin-top: 1em;
+      margin-bottom: 0;
+    }
   }
 
   .article-reading-time {
